# io

./: .gitignore  CMakeLists.txt  README.md  gocxx_io.pc.in
.github/workflows/: ci.yml
include/gocxx/io/: io.h  io_errors.h
src/: io.cpp
tests/: io_test.cpp
